Scope creep: fix svg backgrounds and alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -263,6 +263,10 @@ svg.graphviz {
   overflow: auto;
   border-radius: 6px;
   border: 1px solid $grey-color-light;
+  background-color: white;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /**
